# Netflix_part4

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
Part3Servers/: .gitignore  Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
Part3Servers/RecSystem/src/: CMakeLists.txt
Part3Servers/RecSystem/src/BaseClasses/: Movie.cpp  Movie.h
Part3Servers/RecSystem/src/DataBase/: DataBase.cpp  DataBase.h
Part3Servers/RecSystem/src/Server/: Server.cpp  ThreadPool.cpp  main.cpp
Part3Servers/RecSystem/src/Server/Commands/: AddMovieCommand.h  CMakeLists.txt  Icommand.h
Part3Servers/config/: .env.local  .env.production
Part3Servers/controllers/: category.js  movies.js  recommend.js  tokens.js  user.js
Part3Servers/middleware/: authMiddleware.js  uploadMiddleware.js  uploadMovieFiles.js  uploadVideos.js
Part3Servers/models/: movies.js  user.js
Part3Servers/routes/: category.js  movies.js  recommend.js  upload.js  user.js
Part3Servers/services/: category.js  movies.js  recommend.js  user.js
Part3Servers/utilities/: recommendSocket.js
WIKI/: README_WIKI.md  Setup_README.md
WIKI/Android/: Registration and Login.md  ShowTime Experience.md
WIKI/Web/: Registrarion and Login.md  ShowTime Experience.md
my-app/: .gitignore  app.js  package-lock.json  package.json
my-app/Part3CodeCopy/RecSystem/: CMakeLists.txt  Dockerfile
my-app/Part3CodeCopy/RecSystem/src/BaseClasses/: CMakeLists.txt  User.cpp  User.h
my-app/Part3CodeCopy/RecSystem/src/Client/: Client.py  Dockerfile
my-app/Part3CodeCopy/RecSystem/src/DataBase/: CMakeLists.txt
my-app/Part3CodeCopy/RecSystem/src/Server/: CMakeLists.txt  Server.h  ThreadPool.h
my-app/Part3CodeCopy/RecSystem/src/Server/Commands/: AddMovieCommand.cpp  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  HelpMovieCommand.cpp  HelpMovieCommand.h  Icommand.cpp
my-app/Part3CodeCopy/RecSystem/src/Server/ProgramFlow/: App.cpp  App.h  HandleUserInput.h  Imenu.cpp  Imenu.h  ServerMenu.h
my-app/Part3CodeCopy/RecSystem/src/TESTS/: CMakeLists.txt  Dockerfile  test.cpp
my-app/Part3CodeCopy/models/: category.js
my-app/Part3CodeCopy/routes/: category.js  movies.js  tokens.js  user.js
my-app/Part3CodeCopy/services/: counter.js  movies.js
my-app/config/: .env.local
my-app/public/: asset-manifest.json  index.html
my-app/public/static/css/: main.010a79a3.css  main.010a79a3.css.map  main.01a5a52f.css  main.01a5a52f.css.map  main.039de5bc.css  main.039de5bc.css.map  main.4c31edfa.css  main.4c31edfa.css.map  main.5ec10814.css  main.5ec10814.css.map  main.6a54a2c2.css  main.6a54a2c2.css.map  main.71e520a6.css  main.71e520a6.css.map  main.7ee27a54.css  main.7ee27a54.css.map  main.863ab7a8.css  main.863ab7a8.css.map  main.9bfaece6.css  main.9bfaece6.css.map  main.a172219b.css  main.a172219b.css.map  main.ca861967.css  main.ca861967.css.map  main.ebef7783.css  main.ebef7783.css.map  main.ee2d0b36.css  main.ee2d0b36.css.map  main.f9463eb9.css  main.f9463eb9.css.map
my-app/public/static/js/: main.0490d88a.js  main.0490d88a.js.map  main.19480c74.js  main.19480c74.js.map  main.19ae2de4.js  main.19ae2de4.js.map  main.1e875c9a.js  main.1e875c9a.js.map  main.25a1973b.js  main.25a1973b.js.map  main.28b50d5f.js  main.28b50d5f.js.map  main.34c6688e.js  main.34c6688e.js.map  main.3bc8e67e.js  main.3bc8e67e.js.map  main.3be86a85.js  main.3be86a85.js.map  main.68ea9448.js  main.68ea9448.js.map  main.6da7aee2.js  main.6da7aee2.js.map  main.7191b220.js  main.7191b220.js.map  main.71d1c407.js  main.71d1c407.js.map  main.72f000a2.js  main.72f000a2.js.map  main.7f341ff8.js  main.7f341ff8.js.map  (+52 more)
my-app/src/: App.css  App.js  Movies.js  ProtectedRoute.js  authUtils.js  index.css
my-app/src/Pages/: theme.js
(+45 files in other folders)
